<resources>
    <string name="app_name">Mastermind</string>
    <string name="rules_text">
        Du möchtest einen Code knacken. Der Code ist eine Sequenz
        aus farbigen Pins und nach jeder Runde erhälst du einen Hinweis,
        der dir beim nächsten Versuch weiterhelfen kann. Wiederhole die
        Runden solange, bis du den geheimen Code herausfinden kannst.
        Es gibt folgende Hinweise:
    </string>
    <string name="rules_white">richtige\u00A0Farbe, falsche\u00A0Position</string>
    <string name="rules_black">richtige\u00A0Farbe, richtige\u00A0Position</string>
    <string name="app_rules">Regeln</string>
    <string name="app_highscore">Highscores</string>
    <string name="app_about">Über diese App</string>
    <string name="app_version">Version: %1$s</string>
    <string name="app_copyright">Copyright: MOSOF Games</string>
    <string name="app_group">Gruppe B:\n
        &#8226; Hendrik Mewissen\n
        &#8226; Arne Kaufmann\n
        &#8226; Felix Efferenn\n
        &#8226; Dennis Tiemann\n
        &#8226; Ingo Kuba\n
        &#8226; Eric Schnurr\n
    </string>
    <string name="app_game_undo">Rückgängig</string>
    <string name="app_game_submit">Abgeben</string>
    <string name="new_game">Neues Spiel</string>
    <string name="continue_game">Spiel fortsetzen</string>
    <string name="background">Hintergrund</string>
    <string name="wood">Holz</string>
    <string name="morocco">Marokko</string>
    <string name="banana">Bananen</string>
    <string name="start_game">Spiel starten</string>
    <string name="hole_count">Anzahl Löcher</string>
    <string name="hole_count_wrong">Falsche Loch-Anzahl.</string>
    <string name="hole_count_error">Anzahl Löcher muss gesetzt sein.</string>
    <string name="hole_count_toobig_error">Anzahl Löcher darf nicht Anzahl Farben überschreiten, wenn mehrfache und leere Pins nicht erlaubt sind.</string>
    <string name="pin_count">Anzahl Farben</string>
    <string name="pin_count_wrong">Falsche Pin-Anzahl.</string>
    <string name="pin_colors">Farben der Pins</string>
    <string name="pin_color_wrong">Unbekannte Farbe.</string>
    <string name="pin_color_error">Farben der Pins dürfen nicht doppelt auftreten.</string>
    <string name="max_tries">Max. Versuche</string>
    <string name="max_tries_default">12</string>
    <string name="max_tries_hint">min. 1</string>
    <string name="max_tries_error">Maximale Versuche muss mindestens 1 betragen.</string>
    <string name="allow_duplicate_pins">Mehrfache Farben erlauben</string>
    <string name="allow_empty_pins">Leere Stellen erlauben</string>
    <string name="game_mode">Spielmodus</string>
    <string name="computer">Computer</string>
    <string name="player">Spieler</string>
    <string name="solution">Lösung</string>
    <string name="setup_solution">Lösung setzen</string>
    <string name="solution_error">Lösung muss gesetzt sein.</string>
    <string name="solution_error_duplicate">Lösung enthält mehrfache Farben.</string>
    <string name="solution_error_length">Lösung muss Länge der Lochanzahl haben.</string>
    <string name="solution_success">Lösung wurde gesetzt.</string>
    <string name="setup_fail">Spiel konnte nicht gestartet werden</string>
    <string name="load_fail">Spiel konnte nicht geladen werden</string>
    <string name="pins_missing">Alle Löcher müssen gesetzt sein!</string>
    <string name="pins_duplicate">Farben dürfen nicht mehrfach auftreten!</string>
    <string name="win_title">Gewonnen!</string>
    <string name="win_message">Gib deinen Namen ein</string>
    <string name="empty_pins">Leere Löcher</string>
    <string name="duplicate_pins">Mehrfache Farben</string>
    <string name="place">Platz</string>
    <string name="tries">Versuche</string>
    <string name="undo_warning">Das Spiel wird nicht gewertet, wenn ein Zug rückgängig gemacht wurde.</string>
    <string name="lose_title">Verloren!</string>
    <string name="tries_left">%1$d/%2$d</string>
    <string name="player_mode_message">Spiele gegen andere Spieler werden nicht gewertet!</string>
    <string name="delete_highscore_message">Wollen Sie diesen Eintrag wirklich löschen? Dies kann nicht rückgängig gemacht werden.</string>
</resources>
