...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max_tries"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/max_tries_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/max_tries_hint"
                android:inputType="number"
                android:text="@string/max_tries_default"
...
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/computer"
                android:textSize="@dimen/text_size" />

            <RadioButton
                android:id="@+id/mode_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/player"
                android:textSize="@dimen/text_size" />
        </RadioGroup>
...
